FINALLY found a fix for the ion-select text wrap

--- a/Whisker/src/app/pages/adoption-survey/adoption-survey.page.scss
+++ b/Whisker/src/app/pages/adoption-survey/adoption-survey.page.scss
@@ -19,3 +19,6 @@ ion-button {
     transition: opacity 0.75s;
     margin-top: 10vh;
 }
+ion-select {
+    max-width: 100% !important;
+}
